Added call to action section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,21 @@
         </section>
     </div>
 
+    <section class="call-to-action-section">
+        <div class="call-to-action-card">
+            <div class="cta-form">
+                <div class="cta-description">
+                    <h4>Contact Us</h4>
+                    <p>Learn why our solutions are the the best choice for your problems.</p>
+                </div>
+
+            </div>
+            <form action="#">
+                <input type="submit" value="Learn more" />
+            </form>
+        </div>
+    </section>
+
 
     <footer>
         © 2022 DB Industries Inc. All rights reserved.
